--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
   <header id="header">
     <form class="form-inline">
+      <p>热搜爬虫，热搜数据从2020年12月21日开始统计</p>
       <div class="form-group">
         <input type="text" class="form-control" id="date" placeholder="选择日期">
       </div>
       <button class="btn btn-default" id="btn">查热搜</button>
-      <p>热搜数据从2020年12月21日开始统计</p>
     </form>
-    <h1 id="day"></h1>
+    <h2 id="day"></h2>
   </header>
   <div id="app">
     <div class="weibo app_item">
